<resources>
    <string name="app_name">Movies Planet</string>
    <string name="movie_image">Imagen de la película</string> <!-- Agrega esta línea -->
    <string name="ticket_type_prompt">Seleccione el tipo de boleto</string> <!-- Para el Spinner -->
    <string name="quantity_label">Cantidad de Boletos:</string> <!-- Para la etiqueta de cantidad -->
    <string name="select_date">Seleccionar Fecha</string> <!-- Para el botón de selección de fecha -->
    <string name="select_time">Seleccionar Hora</string> <!-- Para el botón de selección de hora -->
    <string name="proceed_payment">Procesar Boleto</string>
    <!-- Para el botón de proceder al pago -->
    <string name="hint_numero_tarjeta">Número de Tarjeta</string>
    <string name="hint_fecha_vencimiento">Fecha de Vencimiento (MM/AA)</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_nombre_titular">Nombre del Titular</string>
    <string name="text_tarjeta_debito">Tarjeta de Débito</string>
    <string name="text_tarjeta_credito">Tarjeta de Crédito</string>
    <string name="btn_realizar_pago">Realizar Pago</string>
</resources>

